--- a/TW/Project/css/test1.css
+++ b/TW/Project/css/test1.css
@@ -2,8 +2,30 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Poppins';
   }
-  
+
+  /* sdasa */
+
+.content{
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content .textBox h1{
+    margin-left: 100px;
+    color: #101010;
+    font-size: 5em;
+    line-height: 1.6em;
+    font-weight: 550;
+    letter-spacing: 5px;
+    text-shadow: 2px 3px 7px white, 
+                 5px 5px 10px #1ab26b;
+}
+  /* !@# */
   main {
     margin: 100px;
     height: 100vh;
@@ -110,16 +132,46 @@ header nav span {
 }
 
 header nav a{
-    color: #101010;
+  color: #101010;
 }
 
-header nav .button{
-    background-color: #1ab26b;
-    color: #FFF;
-    padding: 10px 20px;
-    border-radius: 4px;
+header nav .dropbtn {
+  font-family: 'Poppins', sans-serif;
+  font-size: 16px;
+  border: none;
+  background-color: #1ab26b;
+  color: #FFF;
+  padding: 10px 20px;
+  border-radius: 4px;
 }
 
-header nav .button:hover{
-    filter: brightness(1.05);
+header nav .dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+header nav .dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #DDDDDD;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+header nav .dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+header nav .dropdown-content a:hover {
+  background-color: #ddd;
+}
+header nav .dropdown:hover .dropdown-content {
+  display: block;
+}
+header nav .dropdown:hover .dropbtn {
+  filter: brightness(1.05);
 }
