--- a/TW/Project/css/test2.css
+++ b/TW/Project/css/test2.css
@@ -1,14 +1,18 @@
-body {
-    font-family: 'Poppins', sans-serif;
+* {
+    padding: 0;
     margin: 0;
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url("brain.jpg");
+    box-sizing: border-box;
+    font-family: 'Poppins';
+  }
+  
+  /* main {
+    margin: 100px;
     height: 100vh;
-    -webkit-backgrousnd-size: cover;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-}
+    display: flex;
+    background: #1ab26b;
+  } */
 
+/* HEADER */
 header{
     width: 100vw;
     height: 100px;
@@ -39,6 +43,7 @@ header .logo div{
 header .logo img{
     height: 105px;
     margin-top: 3px;
+    width: auto;
 }
 
 header nav{
@@ -75,12 +80,12 @@ header nav .dropbtn {
     padding: 10px 20px;
     border-radius: 4px;
 }
-  
+
 header nav .dropdown {
     position: relative;
     display: inline-block;
 }
-  
+
 header nav .dropdown-content {
     display: none;
     position: absolute;
@@ -89,14 +94,14 @@ header nav .dropdown-content {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-  
+
 header nav .dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
-  
+
 header nav .dropdown-content a:hover {
     background-color: #ddd;
 }
@@ -134,27 +139,25 @@ main .content .textBox h1{
                  5px 5px 10px #1ab26b;
 }
 
-main .content .textBox h2{
-    color: #101010;
-    font-size: 4em;
-    line-height: 1.4em;
-    font-weight: 400;
+main .game{
+    margin: 100px;
+    text-align: center;
+    position: relative;
+    font-size: 2.5em;
 }
 
-main .content .textBox h2 span{
-    color: #1ab26b;
-    font-size: 1.15em;
-    font-weight: 600;
+main .game #randomGen{
+    margin-top: 50px;
+    margin-bottom: 25px;
+    font-size: 1em;
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    background-color: #1ab26b;
+    color: #FFF;
+    padding: 10px 20px;
+    border-radius: 4px;
 }
 
-main .content .textBox a{
-    display: inline-block;
-    margin-top: 20px;
-    padding: 8px 20px;
-    background: #1ab26b;
-    color: #fff;
-    border-radius: 40px;
-    font-weight: 500;
-    letter-spacing: 1px;
-    text-decoration: none;
+main .game #num1{
+    font-size: 1em;
 }
