--- a/TW/Project/css/test2.css
+++ b/TW/Project/css/test2.css
@@ -140,7 +140,7 @@ main .content .textBox h1{
 }
 
 main .game{
-    margin: 100px;
+    margin: 10px;
     text-align: center;
     position: relative;
     font-size: 2.5em;
@@ -158,6 +158,11 @@ main .game #randomGen{
     border-radius: 4px;
 }
 
+main .game #random{
+    font-family: 'Poppins', sans-serif;
+    font-weight: 550;
+}
+
 main .game #ready{
     margin-top: 50px;
     margin-bottom: 25px;
@@ -168,6 +173,13 @@ main .game #ready{
     color: #FFF;
     padding: 10px 20px;
     border-radius: 4px;
+
+    position: absolute; 
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 200px;
 }
 
 main .game #submit{
@@ -180,10 +192,19 @@ main .game #submit{
     color: #FFF;
     padding: 10px 20px;
     border-radius: 4px;
+
+    position: absolute; 
+    left: 0; 
+    right: 0; 
+    margin-left: auto; 
+    margin-right: auto; 
+    width: 200px;
 }
 
 main .game #num1{
     font-size: 1em;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 550;
 }
 
 main .game #demo{
